--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -37,10 +37,10 @@ install:
     - SET PATH=%PYTHON%;%PYTHON%\Scripts;%PATH%
     - python -m pip install -U pip setuptools
 
-#    # Fix MSVC builds for 64-bit Python. See:
-#    # http://stackoverflow.com/questions/32091593/cannot-install-windows-sdk-7-1-on-windows-10
-#    - echo "C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64 > "C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\bin\amd64/vcvars64.bat"
-#    - SET PATH=C:\MinGW\bin;%PATH%
+    # Fix MSVC builds for 64-bit Python. See:
+    # http://stackoverflow.com/questions/32091593/cannot-install-windows-sdk-7-1-on-windows-10
+    - echo "C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64 > "C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\bin\amd64/vcvars64.bat"
+    - SET PATH=C:\MinGW\bin;%PATH%
 
     # Check that we have the expected version and architecture for Python
     - python --version
@@ -60,7 +60,7 @@ build_script:
     - poetry run pip install --user %BUILD_DEPS%
     # Build wheel
     - poetry run python buildpre.py
-    - poetry run python build.py build_ext --inplace --force --compiler=mingw
+    - poetry run python build.py build_ext --inplace --force --compiler=mingw32
     - cd ..
 
 test_script:
