--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 env:
     global:
         - REPO_DIR="skranger"
-        - BUILD_COMMIT="0.3.1"
+        - BUILD_COMMIT="0.3.2"
         - BUILD_DEPENDS="cython numpy"
         - UNICODE_WIDTH=32
         - TWINE_USERNAME="crflynn"
@@ -34,13 +34,13 @@ matrix:
       env:
         - MB_PYTHON_VERSION=3.8
         - PLAT=i686
-#    - os: linux
-#      env:
-#        - MB_PYTHON_VERSION=3.9
-#    - os: linux
-#      env:
-#        - MB_PYTHON_VERSION=3.9
-#        - PLAT=i686
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=3.9
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=3.9
+        - PLAT=i686
     - os: osx
       osx_image: xcode12
       env:
