--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -3,7 +3,7 @@ name: wheels
 env:
   REPO_DIR: "skranger"
   BUILD_COMMIT: "0.6.1"
-  BUILD_DEPENDS: "cython numpy"
+  BUILD_DEPENDS: "cython oldest-supported-numpy"
   UNICODE_WIDTH: 32
   TWINE_USERNAME: "crflynn"
   PIP_CMD: "poetry run pip"
